[dn,sf] add a redeploy target so deploy just pushes files

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 # Working directory
 work/
 
+# Contains wifi SSID and password - don't store this!
+wifi.txt
+
 # C extensions
 *.so
 
