--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: python
 python:
   - "3.6.5"
+before_script:
+  # Escape virtualenv, https://github.com/travis-ci/travis-ci/issues/8589.
+  # Thanks @rduplain
+  - deactivate
 script: make test
