--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: python
 python:
   - "3.6.5"
-before_script:
-  # Escape virtualenv, https://github.com/travis-ci/travis-ci/issues/8589.
-  # Thanks @rduplain
-  - deactivate
-  - ls /opt/python
+# Escape virtualenv, https://github.com/travis-ci/travis-ci/issues/8589.
+ - deactivate
+ - export PATH=/opt/python/3.4/bin:$PATH
 script: make test
